[project]
name = "langgraphtutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.9",
    "langsmith>=0.10.5",
    "mcp>=1.28.1",
    "python-dotenv>=1.2.2",
]
